--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ http://www.apache.org/licenses/LICENSE-2.0
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <!-- SEO meta-теги -->
   <meta name="description" content="A modern 4-7-8 breathing exercise web app for relaxation, stress relief, and mindfulness. Practice deep breathing with guided animation to improve focus and calm your mind.">
-  <meta name="keywords" content="breathing exercise, 4-7-8 breathing, guided breathing, relaxation, stress relief, meditation, deep breathing, mindfulness, calm your mind, breath control, web breathing practice">
+  <meta name="keywords" content="breathing exercise online, 4-7-8 breathing, guided breathing, relaxation, stress relief, meditation, deep breathing, mindfulness, calm your mind, breath control, web breathing practice">
   <meta name="author" content="Bc. Fedor Evseev">
   <meta name="robots" content="index, follow">
   <title>4-7-8 Breathing Practice - Relax & Reduce Stress</title>
@@ -20,7 +20,7 @@ http://www.apache.org/licenses/LICENSE-2.0
 </head>
 <body>
   <div class="wrapper">
-    <h1>Практика дыхания 4-7-8</h1>
+    <h1>4-7-8 Breathing Practice</h1>
     
     <!-- Отдельный контейнер для таймера -->
     <div class="timer-container">
